--- a/src/app/modules/settings/settings.component.html
+++ b/src/app/modules/settings/settings.component.html
@@ -1,179 +1,52 @@
 <app-layout>
-    <div class="main">
-        <section class="settings my-5 py-5">
-            <div class="container mt-5">
-                <h1 class="text-center mb-4">Account Settings</h1>
-        
-                <div class="row">
-                    <div class="col-md-3">
-                        <ul class="nav nav-tabs flex-column">
-                            <li class="nav-item">
-                                <a class="nav-link active" id="personal-tab" data-bs-toggle="tab" href="#personals">Personal Details</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" id="security-tab" data-bs-toggle="tab" href="#security">Security</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" id="payment-tab" data-bs-toggle="tab" href="#payment">Payment Details</a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="col-md-9">
-                        <div class="tab-content mt-4">
-                            <div class="tab-pane fade show active" id="personals">
-                                <h2>Personal Details</h2>
-                                <form [formGroup]="form">
-                                   
-                                    <div class="row">
-                                        <div class="col-6">
-                                          <mat-form-field appearance="outline">
-                                            <mat-label>Name</mat-label>
-                                            <input matInput type="text"  >
-                                          </mat-form-field>
-                                        </div>
-                                        </div>
-                                        <br>
-                                        <div class="row">
-                                      
-                                        <div class="col-6">
-                                          <mat-form-field appearance="outline">
-                                            <mat-label>Mobile No</mat-label>
-                                            <input matInput type="tel" >
-                                          </mat-form-field>
-                                        </div>
-                                    </div>
-                                    <br>
-                                        <div class="row">
-                                        <div class="col-6">
-                                          <mat-form-field appearance="outline">
-                                            <mat-label>Email</mat-label>
-                                            <input matInput type="email" >
-                                          </mat-form-field>
-                                        </div>
-                                    </div>
-                                    <br>
-                                        <div class="row">
-                                        <div class="col-6">
-                                          <mat-form-field appearance="outline">
-                                            <mat-label>Password</mat-label>
-                                            <input matInput type="password" >
-                                          </mat-form-field>
-                                        </div>
-                                      </div>
-                                  </form>
-                            </div>
-        
-                            <div class="tab-pane fade" id="security">
-                                <h2>Security</h2>
-                                <form [formGroup]="form" (ngSubmit)="onSubmit()">
-                                    <div class="row">
-                                        <div class="col-6">
-                                    <mat-form-field appearance="outline" class="mt-4">
-                                      <mat-label>Current Password</mat-label>
-                                      <input type="password" formControlName="password" matInput required placeholder="Enter current password">
-                                    </mat-form-field>
-                                    </div>
-                                    </div>
-                                    <div class="row">
-                                        <div class="col-6">
-                                    <mat-form-field appearance="outline" class="mt-4">
-                                        <mat-label>New Password</mat-label>
-                                        <input type="password" formControlName="password" matInput required placeholder="Enter new password">
-                                      </mat-form-field>
-                                      </div>
-                                      </div>
-                                      <div class="row">
-                                        <div class="col-6">
-                                      <mat-form-field appearance="outline" class="mt-4">
-                                        <mat-label>Confirm Password</mat-label>
-                                        <input type="password" formControlName="password" matInput required placeholder="Enter confirm password">
-                                      </mat-form-field>
-                                      </div>
-                                      </div>
-                                   
-                
-                                    <!-- <div class="d-flex align-items-center">
-                                            <span class="lgcaptcha-area" id="captcha"></span>
-                                            <a href="javascript:;" (click)="createCaptcha()" class="lgcaptcha-refresh" aria-label="refresh captcha">
-                                                <img class="icon" src="assets/images/icons/refresh.svg"></a>
-                                        </div> -->
-                                    <!-- <div class="form-floating mb-3">
-                                          <input type="text" class="form-control" id="floatingInput" formControlName="cpatchaTextBox" id="cpatchaTextBox"
-                                          maxlength="6" placeholder="Enter Captcha as shown above">
-                                          <label for="floatingInput">Captcha</label>
-                                      </div> -->
-                                    <!-- <div class="error mt-2"> -->
-                                    <!-- <div *ngIf="(formGroup.controls['cpatchaTextBox'].touched && formGroup.get('cpatchaTextBox').hasError('required')) && !(validCaptchaError && !captchaError) ">
-                                              {{ errors.captcharequired | languageTranslatorImpure}}
-                                          </div>
-                                          <div *ngIf="validCaptchaError && !captchaError">{{'Please enter Valid captcha' | languageTranslatorImpure}}
-                                          </div> -->
-                                    <!-- </div> -->
-                                 <!-- <button mat-raised-button color="primary" (click)="goToSignin()" class="w-100 mt-1">Change Password</button> -->
-                                    <!-- <a (click)="register()">Register here</a> -->
-                                  </form>
-                            </div>
-        
-                            <div class="tab-pane fade" id="payment">
-                                <h2>Payment Details</h2>
-                                <form [formGroup]="form" (ngSubmit)="onSubmit()">
-                                    <div class="row">
-                                        <div class="col-6">
-                                    <mat-form-field appearance="outline" class="mt-3" >
-                                      <mat-label>Card Number</mat-label>
-                                      <input type="text" formControlName="cardNumber" matInput required placeholder="Enter card number">
-                                    </mat-form-field>
-                                    </div>
-                                    </div>
-                                    <div class="row">
-                                        <div class="col-6">
-                                    <mat-form-field appearance="outline" class="mt-3">
-                                        <mat-label>ExpiryDate</mat-label>
-                                        <input type="date" formControlName="expiryDate" matInput required placeholder="MM/YYYY">
-                                      </mat-form-field>
-                                      </div>
-                                      </div>
-                                      
-                                   
-                
-                                    <!-- <div class="d-flex align-items-center">
-                                            <span class="lgcaptcha-area" id="captcha"></span>
-                                            <a href="javascript:;" (click)="createCaptcha()" class="lgcaptcha-refresh" aria-label="refresh captcha">
-                                                <img class="icon" src="assets/images/icons/refresh.svg"></a>
-                                        </div> -->
-                                    <!-- <div class="form-floating mb-3">
-                                          <input type="text" class="form-control" id="floatingInput" formControlName="cpatchaTextBox" id="cpatchaTextBox"
-                                          maxlength="6" placeholder="Enter Captcha as shown above">
-                                          <label for="floatingInput">Captcha</label>
-                                      </div> -->
-                                    <!-- <div class="error mt-2"> -->
-                                    <!-- <div *ngIf="(formGroup.controls['cpatchaTextBox'].touched && formGroup.get('cpatchaTextBox').hasError('required')) && !(validCaptchaError && !captchaError) ">
-                                              {{ errors.captcharequired | languageTranslatorImpure}}
-                                          </div>
-                                          <div *ngIf="validCaptchaError && !captchaError">{{'Please enter Valid captcha' | languageTranslatorImpure}}
-                                          </div> -->
-                                    <!-- </div> -->
-                                 <!-- <button mat-raised-button color="primary" (click)="goToSignin()" class="w-100 mt-1">Update Payment Details</button> -->
-                                    <!-- <a (click)="register()">Register here</a> -->
-                                  </form>
-                                <!-- <form>
-                                    <div class="mb-3">
-                                        <label for="cardNumber" class="form-label">Card Number:</label>
-                                        <input type="text" class="form-control" id="cardNumber" name="cardNumber" required>
-                                    </div>
-        
-                                    <div class="mb-3">
-                                        <label for="expiryDate" class="form-label">Expiry Date:</label>
-                                        <input type="text" class="form-control" id="expiryDate" name="expiryDate" placeholder="MM/YYYY" required>
-                                    </div>
-        
-                                    <button type="submit" class="btn btn-primary">Update Payment Details</button>
-                                </form> -->
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-    </div>
-</app-layout>  
+  <div class="main">
+    <section class="settings my-5 py-5">
+      <div class="container mt-5">
+        <h2 class="text-center mb-4">Account Settings</h2>
+
+        <div class="row justify-content-around align-items-center">
+          <div class="col-md-4">
+            <img src="assets/img/personal-details.png" alt="personal-details">
+          </div>
+          <div class="col-md-4 mt-4 mt-md-0">
+            <h3 class="mb-3 text-center">Personal Details</h3>
+            <form [formGroup]="form">
+              <mat-form-field appearance="outline" class="mt-3">
+                <mat-label>Name</mat-label>
+                <input matInput type="text">
+              </mat-form-field>
+              <mat-form-field appearance="outline" class="mt-3">
+                <mat-label>Mobile No</mat-label>
+                <input matInput type="tel">
+              </mat-form-field>
+              <mat-form-field appearance="outline" class="mt-3">
+                <mat-label>Email</mat-label>
+                <input matInput type="email">
+              </mat-form-field>
+            </form>
+          </div>
+
+          <!-- <div class="col-md-4">
+            <h3 class="mb-3 text-center">Change password</h3>
+            <form [formGroup]="form" (ngSubmit)="onSubmit()">
+              <mat-form-field appearance="outline" class="mt-4">
+                <mat-label>Current Password</mat-label>
+                <input type="password" formControlName="password" matInput required
+                  placeholder="Enter current password">
+              </mat-form-field>
+              <mat-form-field appearance="outline" class="mt-4">
+                <mat-label>New Password</mat-label>
+                <input type="password" formControlName="password" matInput required placeholder="Enter new password">
+              </mat-form-field>
+              <mat-form-field appearance="outline" class="mt-4">
+                <mat-label>Confirm Password</mat-label>
+                <input type="password" formControlName="password" matInput required
+                  placeholder="Enter confirm password">
+              </mat-form-field>
+            </form>
+          </div> -->
+        </div>
+      </div>
+    </section>
+  </div>
+</app-layout>
