--- a/src/scss/base/_colors.scss
+++ b/src/scss/base/_colors.scss
@@ -4,7 +4,7 @@ $saturation-primary: 100%;
 $lightness-primary: 10%;
 
 $clr-primary: hsl(90, 100%, 30%); //339ad7
-$clr-primary-dark: hsl(90, 100%, 10%);
+$clr-primary-dark: hsl(90, 100%, 20%);
 $clr-primary-light: hsl(90, 100%, 70%);
 
 // secondary colors
@@ -12,7 +12,7 @@ $hue-secondary: 15;
 $saturation-secondary: 100%;
 $lightness-secondary: 15%;
 
-$clr-secondary: hsl(15, 100%, 15%);
+$clr-secondary: hsl(15, 100%, 15%); //#4d1300
 $clr-secondary-light: hsl(15, 100%, 75%);
 
 $clr-light: hsl(196, 100%, 98%);
