room listing with api integration

--- a/src/app/modules/resorts/vanavihari-maredumilli/vanavihari-maredumilli.component.html
+++ b/src/app/modules/resorts/vanavihari-maredumilli/vanavihari-maredumilli.component.html
@@ -110,6 +110,9 @@
                       <h5>{{ room.rating }}</h5>
                       <p class="card-text">
                         <small class="text-muted">{{ weekDayPrice }}</small>
+                        <!-- <small class="text-muted">{{ weekDayGuestPrice }}</small>
+                        <small class="text-muted">{{ weekendPrice }}</small>
+                        <small class="text-muted">{{ weekendGuestPrice }}</small> -->
                       </p>
                       <button class="btn btn-primary" (click)="addRoom()">
                         Add room
