logo and favicon

--- a/src/app/modules/layout/layout.component.html
+++ b/src/app/modules/layout/layout.component.html
@@ -3,7 +3,7 @@
     <div class="container-fluid">
       
       <a class="navbar-brand me-auto py-0" href="#">
-        <img src="assets/img/vanavihari-logo.png" alt="vanavihari-logo">
+        <img src="assets/img/logo-vana.png" alt="logo-vana">
       </a>
       <ul class="navbar-nav d-flex flex-row gap-2 gap-lg-3">
         <li class="nav-item dropdown d-none d-lg-block">
