--- a/src/app/shared/search-resort/search-resort.component.html
+++ b/src/app/shared/search-resort/search-resort.component.html
@@ -5,12 +5,8 @@
         <mat-form-field appearance="outline">
           <mat-label>Select Resort</mat-label>
           <mat-select required [(ngModel)]="selectedResort">
-            <mat-option value="VanaVihari, Maredumilli"
-              >Vanavihari, Maredumilli</mat-option
-            >
-            <mat-option value="Jungle Star, Valamuru"
-              >Jungle Star, Valamuru</mat-option
-            >
+            <mat-option value="VanaVihari, Maredumilli">Vanavihari, Maredumilli</mat-option>
+            <mat-option value="Jungle   Star, Valamuru">Jungle Star, Valamuru</mat-option>
           </mat-select>
         </mat-form-field>
       </div>
@@ -22,37 +18,19 @@
             <input matEndDate placeholder="Checkout date" />
           </mat-date-range-input>
           <mat-hint>MM/DD/YYYY – MM/DD/YYYY</mat-hint>
-          <mat-datepicker-toggle
-            matSuffix
-            [for]="picker"
-          ></mat-datepicker-toggle>
+          <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
           <mat-date-range-picker #picker></mat-date-range-picker>
         </mat-form-field>
       </div>
       <div class="col-lg-3 position-relative">
         <mat-form-field appearance="outline">
           <mat-label>Guests</mat-label>
-          <input
-            type="text"
-            [value]="RoomValues"
-            matInput
-            data-bs-toggle="modal"
-            data-bs-target="#modalId"
-          />
+          <input type="text" [value]="RoomValues" matInput data-bs-toggle="modal" data-bs-target="#modalId" />
         </mat-form-field>
         <!-- modal for adding guests, children and rooms -->
-        <div
-          class="modal fade position-absolute modal-searchbar"
-          id="modalId"
-          tabindex="-1"
-          aria-labelledby="modalTitleId"
-          aria-hidden="true"
-          role="dialog"
-          data-bs-backdrop="static"
-        >
-          <div
-            class="modal-dialog modal-dialog-scrollable modal-dialog-centered"
-          >
+        <div class="modal fade position-absolute modal-searchbar" id="modalId" tabindex="-1"
+          aria-labelledby="modalTitleId" aria-hidden="true" role="dialog" data-bs-backdrop="static">
+          <div class="modal-dialog modal-dialog-scrollable modal-dialog-centered">
             <div class="modal-content">
               <div class="modal-body">
                 <!-- Angular Material form fields for adults, children, rooms -->
@@ -61,25 +39,12 @@
                   <label for="adults" class="col-sm-6">No. of Adults:</label>
                   <div class="col-sm-6">
                     <div class="input-group">
-                      <button
-                        class="btn"
-                        type="button"
-                        (click)="decrementAdults()"
-                      >
+                      <button class="btn" type="button" (click)="decrementAdults()">
                         -
                       </button>
-                      <input
-                        type="number"
-                        id="adultsCount"
-                        name="adults"
-                        class="form-control text-center"
-                        [(ngModel)]="adultsCount"
-                      />
-                      <button
-                        class="btn"
-                        type="button"
-                        (click)="incrementAdults()"
-                      >
+                      <input type="number" id="adultsCount" name="adults" class="form-control text-center"
+                        [(ngModel)]="adultsCount" />
+                      <button class="btn" type="button" (click)="incrementAdults()">
                         +
                       </button>
                     </div>
@@ -87,31 +52,15 @@
                 </div>
                 <!-- Children section -->
                 <div class="row my-3">
-                  <label for="children" class="col-sm-6"
-                    >No. of Children:</label
-                  >
+                  <label for="children" class="col-sm-6">No. of Children:</label>
                   <div class="col-sm-6">
                     <div class="input-group">
-                      <button
-                        class="btn"
-                        type="button"
-                        (click)="decrementChildren()"
-                      >
+                      <button class="btn" type="button" (click)="decrementChildren()">
                         -
                       </button>
-                      <input
-                        type="number"
-                        id="childrenCount"
-                        name="children"
-                        class="form-control text-center"
-                        [(ngModel)]="childrenCount"
-                      />
-                      <button
-                        class="btn"
-                        type="button"
-                        (click)="incrementChildren()"
-                        [disabled]="isMaxReached"
-                      >
+                      <input type="number" id="childrenCount" name="children" class="form-control text-center"
+                        [(ngModel)]="childrenCount" />
+                      <button class="btn" type="button" (click)="incrementChildren()" [disabled]="isMaxReached">
                         +
                       </button>
                     </div>
@@ -122,15 +71,8 @@
                 </div>
                 <!-- Age dropdowns -->
                 <div id="ageDropdowns">
-                  <div
-                    class="col-auto"
-                    *ngFor="let i of getChildrenCountArray()"
-                  >
-                    <select
-                      class="form-select mb-3"
-                      name="childAge"
-                      [(ngModel)]="selectedAges[i]"
-                    >
+                  <div class="col-auto" *ngFor="let i of getChildrenCountArray()">
+                    <select class="form-select mb-3" name="childAge" [(ngModel)]="selectedAges[i]">
                       <option value="" disabled>Age required</option>
                       <option value="0-2">0 - 2 years</option>
                       <option value="3-5">3 - 5 years</option>
@@ -143,25 +85,12 @@
                   <label for="rooms" class="col-sm-6">No. of Rooms:</label>
                   <div class="col-sm-6">
                     <div class="input-group">
-                      <button
-                        class="btn"
-                        type="button"
-                        (click)="decrementRooms()"
-                      >
+                      <button class="btn" type="button" (click)="decrementRooms()">
                         -
                       </button>
-                      <input
-                        type="number"
-                        id="roomsCount"
-                        name="rooms"
-                        class="form-control text-center"
-                        [(ngModel)]="roomsCount"
-                      />
-                      <button
-                        class="btn"
-                        type="button"
-                        (click)="incrementRooms()"
-                      >
+                      <input type="number" id="roomsCount" name="rooms" class="form-control text-center"
+                        [(ngModel)]="roomsCount" />
+                      <button class="btn" type="button" (click)="incrementRooms()">
                         +
                       </button>
                     </div>
@@ -169,14 +98,8 @@
                 </div>
               </div>
               <div class="modal-footer">
-                <button
-                  mat-raised-button
-                  color="primary"
-                  type="button"
-                  class="w-100"
-                  data-bs-dismiss="modal"
-                  (click)="getvalues(roomsCount, adultsCount)"
-                >
+                <button mat-raised-button color="primary" type="button" class="w-100" data-bs-dismiss="modal"
+                  (click)="getvalues(roomsCount, adultsCount)">
                   Done
                 </button>
               </div>
@@ -187,12 +110,7 @@
       <div class="col-auto flex-grow-1">
         <!-- <button mat-raised-button color="primary" (click)="goToSignin()" class="w-100 mt-1">Sign In</button> -->
 
-        <button
-          mat-raised-button
-          color="primary"
-          class="w-100"
-          (click)="goToVanavihari()"
-        >
+        <button mat-raised-button color="primary" class="w-100" (click)="goToVanavihari()">
           Search
         </button>
         <!-- <button
