--- a/src/app/shared/search-resort/search-resort.component.scss
+++ b/src/app/shared/search-resort/search-resort.component.scss
@@ -31,3 +31,23 @@
         }
     }
 }
+
+// material datepicker
+// .mat-form-field {
+//   display: inline-flex;
+// }
+
+// .mat-form-field-infix {
+//   display: inline-flex !important;
+//   align-items: baseline;
+//   padding: 0 16px;
+// }
+
+// .mat-mdc-form-field-infix {
+//   width: 100px !important;
+// }
+
+// .mat-mdc-form-field-subscript-wrapper,
+// .mat-mdc-form-field-bottom-align::before {
+//   display: none !important;
+// }
