--- a/src/app/modules/layout/layout.component.html
+++ b/src/app/modules/layout/layout.component.html
@@ -24,16 +24,16 @@
           <a class="nav-link" href="tel:+919494151617" title="call">
             <i class="fa-solid fa-mobile-screen me-2"></i>9494151617</a>
         </li>
-        <!-- <li class="nav-item" *ngIf="!isLoggedIn()">
+        <li class="nav-item" *ngIf="!isLoggedIn()">
           <a class="nav-link" routerLink="/sign-in" routerLinkActive="active" ariaCurrentWhenActive="page">
             <i class="fa-solid fa-arrow-right-to-bracket me-2"></i>Sign in</a>
         </li>
         <li class="nav-item" *ngIf="!isLoggedIn()">
           <a class="nav-link" routerLink="/sign-up" routerLinkActive="active" ariaCurrentWhenActive="page">
             <i class="fa-solid fa-arrow-up-from-bracket me-2"></i>Sign up</a>
-        </li> -->
+        </li>
         <!-- *ngIf="isLoggedIn()" -->
-        <li class="nav-item dropdown  ">
+        <li class="nav-item dropdown d-none ">
           <a class="nav-link dropdown-toggle" href="#" id="dropdownId" data-bs-toggle="dropdown" aria-haspopup="true"
             aria-expanded="false">
             <i class="fa-regular fa-user-circle me-2"></i>Balachandiran
