--- a/src/app/auth/sign-up/sign-up.component.html
+++ b/src/app/auth/sign-up/sign-up.component.html
@@ -3,10 +3,7 @@
     <div class="container my-5 py-5">
       <div class="row justify-content-between align-items-center">
         <div class="col-md-5">
-          <img
-            src="assets/images/login-image-left.svg"
-            alt="login-image-left"
-          />
+          <img src="assets/images/login-image-left.svg" alt="login-image-left" />
         </div>
         <div class="col-md-5 mt-3 mt-md-0">
           <div class="card border-0">
@@ -18,132 +15,48 @@
               <form [formGroup]="form" (ngSubmit)="onSubmit()">
                 <mat-form-field appearance="outline">
                   <mat-label>Full Name</mat-label>
-                  <input
-                    type="text"
-                    matInput
-                    required
-                    formControlName="full_name"
-                    name="Full_Name"
-                    ngModel
-                    placeholder="Enter Name"
-                  />
-                  <mat-error *ngIf="form.get('full_name')?.invalid && (form.get('full_name')?.dirty || form.get('full_name')?.touched)">
-                    Please enter your full name.
-                  </mat-error>
+                  <input type="text" matInput required formControlName="full_name" name="Full_Name" ngModel placeholder="Enter full name" />
+                  <mat-error *ngIf="form.get('full_name')?.invalid && (form.get('full_name')?.dirty || form.get('full_name')?.touched)"> Please enter your full name.</mat-error>
                 </mat-form-field>
                 <mat-form-field appearance="outline" class="mt-3">
                   <mat-label>Mobile no.</mat-label>
-                  <input
-                    type="tel"
-                    matInput
-                    required
-                    formControlName="mobile_number"
-                    name="Mobile_Number"
-                    ngModel
-                    placeholder="Enter 10 digit mobile no."
-                  />
-                  <mat-error *ngIf="form.get('mobile_number')?.invalid && (form.get('mobile_number')?.dirty || form.get('mobile_number')?.touched)">
-                    Please enter the valid Mobile Number.
-                  </mat-error>
+                  <input type="tel" matInput required formControlName="mobile_number" name="Mobile_Number" ngModel placeholder="Enter 10 digit mobile no." />
+                  <mat-error *ngIf="form.get('mobile_number')?.invalid && (form.get('mobile_number')?.dirty || form.get('mobile_number')?.touched)"> Please enter the valid Mobile Number. </mat-error>
                 </mat-form-field>
                 <mat-form-field appearance="outline" class="mt-3">
                   <mat-label>Email</mat-label>
-                  <input
-                    type="email"
-                    matInput
-                    required
-                    formControlName="email_id"
-                    name="Email_Id"
-                    ngModel
-                    placeholder="abc@gmail.com"
-                  />
-                  <mat-error
-                    *ngIf="
-                      form.controls.email_id.invalid &&
-                      (form.controls.email_id.dirty ||
-                        form.controls.email_id.touched)
-                    "
-                  >
-                    Please enter a valid email address.
-                  </mat-error>
+                  <input type="email" matInput required formControlName="email_id" name="Email_Id" ngModel placeholder="abc@gmail.com" />
+                  <mat-error *ngIf="form.controls.email_id.invalid && (form.controls.email_id.dirty || form.controls.email_id.touched)">Please enter a valid email address.</mat-error>
                 </mat-form-field>
                 <mat-form-field appearance="outline" class="mt-3">
                   <mat-label>Password</mat-label>
-                  <input
-                    type="password"
-                    matInput
-                    name="Password"
-                    required
-                    formControlName="password"
-                    ngModel
-                    placeholder="Enter Password"
-                  />
+                  <input type="password" matInput name="Password" required formControlName="password" ngModel placeholder="Enter Password" />
                   <!-- <mat-hint><strong>Your data is safe with us</strong> </mat-hint> -->
                   <!-- <mat-hint>{{message.value.length}} / 256</mat-hint> -->
-                  <mat-error
-                    *ngIf="
-                      form.controls.password.errors &&
-                      (form.controls.password.dirty ||
-                        form.controls.password.touched)
-                    "
-                  >
-                    <span *ngIf="form.controls.password.errors.required"
-                      >Password is required.</span
-                    >
-                    <span *ngIf="form.controls.password.errors.minlength"
-                      >Password must be at least 8 characters long.</span
-                    >
-                    <span *ngIf="form.controls.password.errors.pattern"
-                      >Password must contain at least one uppercase letter, one
-                      number, and one special character.</span
-                    >
+                  <mat-error *ngIf="form.controls.password.errors && (form.controls.password.dirty ||form.controls.password.touched) ">
+                    <span *ngIf="form.controls.password.errors.required">Password is required.</span>
+                    <span *ngIf="form.controls.password.errors.minlength">Password must be at least 8 characters long.</span>
+                    <span *ngIf="form.controls.password.errors.pattern">Password must contain at least one uppercase letter, one number, and one special character.</span>
                   </mat-error>
                 </mat-form-field>
                 <mat-form-field appearance="outline" class="mt-3">
                   <mat-label>Repeat Password</mat-label>
-                  <input
-                    type="password"
-                    matInput
-                    name="Repeat_Password"
-                    required
-                    formControlName="repeat_password"
-                    ngModel
-                    placeholder="Repeat Password"
-                  />
+                  <input type="password" matInput name="Repeat_Password" required formControlName="repeat_password" ngModel placeholder="Repeat Password" />
                   <!-- <mat-hint><strong>Your data is safe with us</strong> </mat-hint> -->
                   <!-- <mat-hint>{{message.value.length}} / 256</mat-hint> -->
-                  <mat-error
-                    *ngIf="
-                      form.controls.repeat_password.errors &&
-                      (form.controls.repeat_password.dirty ||
-                        form.controls.repeat_password.touched)
-                    "
-                  >
-                    <span
-                      *ngIf="
-                        form.controls.repeat_password.errors.passwordsNotMatch
-                      "
-                      >Passwords do not match.</span
-                    >
+                  <mat-error *ngIf="form.controls.repeat_password.errors && (form.controls.repeat_password.dirty ||  form.controls.repeat_password.touched) ">
+                    <span *ngIf="form.controls.repeat_password.errors.passwordsNotMatch">Passwords do not match.</span>
                   </mat-error>
                 </mat-form-field>
                 <!-- <mat-checkbox (change)="toggleTermsModal($event.checked)" value="" color="primary" class="my-2">I agree
                   to the terms and conditions</mat-checkbox> -->
                 <!-- Terms and Conditions Modal -->
-                <button
-                  mat-raised-button
-                  color="primary"
-                  class="w-100 mt-3"
-                >
-                  Sign Up
-                </button>
+                <button mat-raised-button color="primary" class="w-100 mt-3">Sign Up</button>
               </form>
 
               <div class="d-flex justify-content-center mt-5">
                 <!-- <a class="text-danger">Reset fields</a> -->
-                <a class="text-info-emphasis" (click)="goToSignin()"
-                  >Already have an account? Sign In</a
-                >
+                <a class="text-info-emphasis" (click)="goToSignin()">Already have an account? Sign In</a>
               </div>
             </div>
           </div>
@@ -160,16 +73,8 @@
   [modalButtonColor]="modalButtonColor">
 </app-confirmation-modal> -->
 
-<div
-  class="modal fade position-static"
-  [ngClass]="{ show: showTermsModal }"
-  tabindex="-1"
-  role="dialog"
-  aria-labelledby="modalTitleId"
-  aria-hidden="true"
-  data-bs-backdrop="false"
-  data-bs-keyboard="false"
->
+<div class="modal fade position-static" [ngClass]="{ show: showTermsModal }" tabindex="-1" role="dialog"
+  aria-labelledby="modalTitleId" aria-hidden="true" data-bs-backdrop="false" data-bs-keyboard="false">
   <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
     <div class="modal-content">
       <div class="modal-header">
