--- a/src/app/modules/settings/settings.component.html
+++ b/src/app/modules/settings/settings.component.html
@@ -6,23 +6,74 @@
 
         <div class="row justify-content-around align-items-center">
           <div class="col-md-4">
-            <img src="assets/img/personal-details.png" alt="personal-details">
+            <img src="assets/img/personal.jpg" alt="personal-details">
           </div>
           <div class="col-md-4 mt-4 mt-md-0">
             <h3 class="mb-3 text-center">Personal Details</h3>
             <form [formGroup]="form">
+              <div class="mt-3 d-flex justify-content-between align-items-end" *ngIf="editingField !== 'full_name'">
+                <p><strong>Name:</strong> {{ form.value.full_name }}</p> <button mat-button class="btn btn-outline-primary" (click)="editField('full_name')">Edit</button>
+              </div>
+              <div class="mt-3" *ngIf="editingField === 'full_name'">
+                <mat-form-field appearance="outline">
+                  <mat-label>Name</mat-label>
+                  <input matInput formControlName="full_name" type="text">
+                </mat-form-field>
+                <div class="mt-3 text-start">
+                  <button mat-button class="btn btn-danger" (click)="cancelEditing('full_name')">Cancel</button>
+                  <button mat-button class="btn btn-success" (click)="saveChanges('full_name')">Save</button>
+                </div>
+              </div>
+          
+              
+              <div class="mt-3 d-flex justify-content-between align-items-end" *ngIf="editingField !== 'mobile_number'">
+                <p><strong>Mobile No:</strong> {{ form.value.mobile_number }}</p><button mat-button class="btn btn-outline-primary" (click)="editField('mobile_number')">Edit</button>
+              </div>
+              <div class="mt-3" *ngIf="editingField === 'mobile_number'">
+                <mat-form-field appearance="outline">
+                  <mat-label>Mobile No</mat-label>
+                  <input matInput formControlName="mobile_number" type="tel">
+                </mat-form-field>
+                <div class="mt-3 text-start">
+                  <button mat-button class="btn btn-danger" (click)="cancelEditing('mobile_number')">Cancel</button>
+                  <button mat-button class="btn btn-success" (click)="saveChanges('mobile_number')">Save</button>
+                </div>
+              </div>
+          
+              
+              <div class="mt-3 d-flex justify-content-between align-items-end" *ngIf="editingField !== 'email'">
+                   <p><strong>Email:</strong> {{ form.value.email }}</p> <button mat-button class="btn btn-outline-primary" (click)="editField('email')">Edit</button>
+              
+                
+              </div>
+              <div class="mt-3" *ngIf="editingField === 'email'">
+                <mat-form-field appearance="outline">
+                  <mat-label>Email</mat-label>
+                  <input matInput formControlName="email" type="email">
+                </mat-form-field>
+                <div class="mt-3 text-start">
+                  <button mat-button class="btn btn-danger" (click)="cancelEditing('email')">Cancel</button>
+                  <button mat-button class="btn btn-success" (click)="saveChanges('email')">Save</button>
+                </div>
+              </div>
+          
               <mat-form-field appearance="outline" class="mt-3">
-                <mat-label>Name</mat-label>
+                <mat-label>DOB</mat-label>
+                <input matInput [matDatepicker]="dobPicker" placeholder="Choose a date">
+                <mat-datepicker-toggle matSuffix [for]="dobPicker"></mat-datepicker-toggle>
+                <mat-datepicker #dobPicker></mat-datepicker>
+              </mat-form-field>
+              
+              
+              <mat-form-field appearance="outline" class="mt-3">
+                <mat-label>Nationality</mat-label>
                 <input matInput type="text">
               </mat-form-field>
               <mat-form-field appearance="outline" class="mt-3">
-                <mat-label>Mobile No</mat-label>
-                <input matInput type="tel">
+                <mat-label>Address</mat-label>
+                <input matInput type="text">
               </mat-form-field>
-              <mat-form-field appearance="outline" class="mt-3">
-                <mat-label>Email</mat-label>
-                <input matInput type="email">
-              </mat-form-field>
+              
             </form>
           </div>
 
