--- a/src/app/modules/layout/layout.component.html
+++ b/src/app/modules/layout/layout.component.html
@@ -36,7 +36,7 @@
         <li class="nav-item dropdown"  *ngIf="isLoggedIn()">
           <a class="nav-link dropdown-toggle" href="#" id="dropdownId" data-bs-toggle="dropdown" aria-haspopup="true"
             aria-expanded="false">
-            <i class="fa-regular fa-user-circle me-2"></i>Balachandiran
+            <i class="fa-regular fa-user-circle me-2"></i> {{ accountusername }}
           </a>
           <div class="dropdown-menu position-absolute py-3 px-2" aria-labelledby="dropdownId">
             <!-- nav item dropdown My Account>Settings, My Bookings, Saved -->
