password error msg modified

--- a/src/app/auth/sign-up/sign-up.component.html
+++ b/src/app/auth/sign-up/sign-up.component.html
@@ -36,8 +36,8 @@
                   </button>
                   <mat-error *ngIf="form.controls.password.errors && (form.controls.password.dirty || form.controls.password.touched)">
                       <span *ngIf="form.controls.password.errors.required">Password is required.</span>
-                      <span *ngIf="form.controls.password.errors.minlength">Password must be at least 6 characters long.</span>
-                      <span *ngIf="form.controls.password.errors.pattern">Password must contain at least one uppercase letter, one number, and one special character.</span>
+                      <!-- <span *ngIf="form.controls.password.errors.minlength">Password must be at least 6 characters long.</span> -->
+                      <span *ngIf="form.controls.password.errors.pattern">Pwsd: Min 6 chars, 1 uppercase, number, special char.</span>
                   </mat-error>
                 </mat-form-field>    
                 <mat-form-field appearance="outline" class="mt-3">
