room listing page task5

--- a/src/app/modules/resorts/vanavihari-maredumilli/vanavihari-maredumilli.component.html
+++ b/src/app/modules/resorts/vanavihari-maredumilli/vanavihari-maredumilli.component.html
@@ -105,19 +105,19 @@
                         </span>
                       </div> -->
                     </div>
-                    <div class="col-6 details-right text-start">
+                    <div class="col-6 details-right text-end">
                       <!-- <div class="star-rating">{{ room.rating }}</div>
                       <h5>{{ room.rating }}</h5> -->
-                      <p class="card-text">WeekDays Price : 
+                      <p class="card-text">WeekDays charges : 
                         <small class="text-muted">{{ room.weekDayPrice }}</small>
                       </p>
-                      <p class="card-text">Weekend Price : 
+                      <p class="card-text">Weekend charges : 
                         <small class="text-muted">{{ room.weekendPrice }}</small>
                       </p>
-                      <p class="card-text">WeekDays Guest Price : 
+                      <p class="card-text">WeekDays Guest charges : 
                         <small class="text-muted">{{ room.weekDayGuestPrice }}</small>
                       </p>
-                      <p class="card-text">Weekend Guest Price :
+                      <p class="card-text">Weekend Guest charges :
                         <small class="text-muted">{{ room.weekendGuestPrice }}</small>
                       </p>
                       <button class="btn btn-primary" (click)="addRoom(room.id)">
