room listing page task6

--- a/src/app/modules/resorts/vanavihari-maredumilli/vanavihari-maredumilli.component.html
+++ b/src/app/modules/resorts/vanavihari-maredumilli/vanavihari-maredumilli.component.html
@@ -120,7 +120,7 @@
                       <p class="card-text">Weekend Guest charges :
                         <small class="text-muted">{{ room.weekendGuestPrice }}</small>
                       </p>
-                      <button class="btn btn-primary" (click)="addRoom(room.id)">
+                      <button class="btn btn-primary" (click)="addRoom(room)">
                         Add room
                       </button>
                     </div>
