--- a/src/app/modules/resorts/vanavihari-maredumilli/vanavihari-maredumilli.component.html
+++ b/src/app/modules/resorts/vanavihari-maredumilli/vanavihari-maredumilli.component.html
@@ -50,6 +50,12 @@
       <div class="row mt-5">
         <aside class="">
           <div class="sort">
+            <h3>Cottage Type</h3>
+            <mat-checkbox id="hilltop">Hilltop Guest House</mat-checkbox><br>
+            <mat-checkbox id="pre-fabricated">Pre-Fabricated Cottages</mat-checkbox><br>
+            <mat-checkbox id="wooden">Wooden Cottages</mat-checkbox><br>
+            <mat-checkbox id="deluxe">Deluxe Rooms</mat-checkbox><br>
+            <mat-checkbox id="tented">Tented Cottages</mat-checkbox><br><br><br>
             <mat-form-field>
               <mat-label>Sort by Price</mat-label>
               <mat-select [(value)]="selectedSortOption" name="priceSort">
