Booking Summary - changes 1 - 13-03-2023

--- a/src/app/modules/resorts/vanavihari-maredumilli/vanavihari-maredumilli.component.scss
+++ b/src/app/modules/resorts/vanavihari-maredumilli/vanavihari-maredumilli.component.scss
@@ -42,6 +42,7 @@
 
 aside{
   background-color: hsl($hue-primary, $saturation-primary, 85%);
+  padding: 20px;
 
   @media(min-width:768px){
     flex-basis: 35%;
@@ -65,7 +66,7 @@ aside{
       position: sticky;
       top: 5%;
       margin-top: 2rem;
-      overflow-y: auto;
+      // overflow-y: auto;
 
     }
   }
