--- a/src/app/modules/booking-summary/booking-summary.component.html
+++ b/src/app/modules/booking-summary/booking-summary.component.html
@@ -46,12 +46,12 @@
                             <p>Total Number of Rooms: <span id="totalRooms">1</span></p>
                             <p>Adults: 2</p>
                             <p>Children: 0</p>
+                            <p>Guests: 2</p>
                             <a class="font-weight-bold" (click)="goToVanavihari()">Change your selection</a>
                         </div>
                         <div class="card">
                             <h5>Payment details</h5>
                             <p><strong>Room price per night:</strong> INR 4000</p>
-                            <p><strong>Total no. of guests:</strong> 2</p>
                             <!-- <p>Total room tarri: 5400</p> -->
                             <p><strong>GST @12%:</strong> INR 480</p>
                             <h4><strong>Total price:</strong> INR 6372</h4>
