Booking Summary - changes 4 - 13-03-2023

--- a/src/app/modules/booking-summary/booking-summary.component.html
+++ b/src/app/modules/booking-summary/booking-summary.component.html
@@ -43,10 +43,10 @@
                         </div>
                         <div class="card">
                             <h5>Room & Guests Details</h5>
-                            <p>Total Number of Rooms: <span id="totalRooms">1</span></p>
-                            <p>Adults: 2</p>
-                            <p>Children: 0</p>
-                            <p>Guests: 2</p>
+                            <p>Total Number of Rooms: <span id="totalRooms">{{roomsCount}}</span></p>
+                            <p>Adults: {{adultsCount}}</p>
+                            <p>Children: {{childrenCount}}</p>
+                            <p>Guests: {{roomsCount}}</p>
                             <a class="font-weight-bold" (click)="goToVanavihari()">Change your selection</a>
                         </div>
                         <div class="card">
