myprofile/Booking Summary - changes 1 - 14-03-2023

--- a/src/app/modules/booking-summary/booking-summary.component.html
+++ b/src/app/modules/booking-summary/booking-summary.component.html
@@ -125,6 +125,7 @@
                                 <mat-label>Pincode</mat-label>
                                 <input type="tel" matInput required placeholder="Enter your pincode">
                             </mat-form-field>
+                            <button class="btn btn-primary w-100 mt-1">Submit</button>
                             <section class="booking-terms mt-4">
                                 <h5 class="mb-3">Review the terms before booking.</h5>
                                 <div class="row row-cols-1 row-cols-md-2 g-4">
@@ -187,7 +188,7 @@
                                     </div>
                                 </div>
                             </section>
-                            <button mat-raised-button color="primary" class="w-100 mt-3">Pay now</button>
+                            <!-- <button mat-raised-button color="primary" class="w-100 mt-3">Pay now</button> -->
                         </form>
                     </div>
                 </div>
