--- a/src/app/modules/settings/settings.component.html
+++ b/src/app/modules/settings/settings.component.html
@@ -58,7 +58,7 @@
           
               <mat-form-field appearance="outline" class="mt-3">
                 <mat-label>DOB</mat-label>
-                <input matInput [matDatepicker]="dobPicker" placeholder="Choose a date">
+                <input matInput [matDatepicker]="dobPicker" formControlName="dob" placeholder="Choose a date">
                 <mat-datepicker-toggle matSuffix [for]="dobPicker"></mat-datepicker-toggle>
                 <mat-datepicker #dobPicker></mat-datepicker>
               </mat-form-field>
@@ -66,52 +66,52 @@
               
               <mat-form-field appearance="outline" class="mt-3">
                 <mat-label>Nationality</mat-label>
-                <input matInput type="text">
+                <input matInput type="text" required formControlName="nationality">
               </mat-form-field>
               
               <div class="mt-3">
                 <mat-form-field appearance="outline" class="half-width">
                   <mat-label>Address Line 1</mat-label>
-                  <input matInput type="text" required>
+                  <input matInput type="text" required formControlName="address1">
                 </mat-form-field>
               </div>
               
               
                 <mat-form-field appearance="outline" class="half-width">
                   <mat-label>Address Line 2</mat-label>
-                  <input matInput type="text">
+                  <input matInput type="text" formControlName="address2">
                 </mat-form-field>
 
               <div class="mt-3 d-flex justify-content-between">
               
                 <mat-form-field appearance="outline" class="half-width">
                   <mat-label>City</mat-label>
-                  <input matInput type="text" required>
+                  <input matInput type="text" required formControlName="city">
                 </mat-form-field>
                 &nbsp;&nbsp;
                 <mat-form-field appearance="outline" class="half-width">
                   <mat-label>State</mat-label>
-                  <input matInput type="text" required>
+                  <input matInput type="text" required formControlName="state">
                 </mat-form-field>
               </div>
               
               <div class="mt-3 d-flex justify-content-between">
                 <mat-form-field appearance="outline" class="half-width">
                   <mat-label>Pincode</mat-label>
-                  <input matInput type="text" required>
+                  <input matInput type="number" required formControlName="pincode">
                 </mat-form-field>&nbsp;&nbsp;
               
                 <mat-form-field appearance="outline" class="half-width">
                   <mat-label>Country</mat-label>
-                  <mat-select required>
+                  <mat-select required formControlName="country">
                     <mat-option *ngFor="let country of countries" [value]="country">
                       {{ country }}
                     </mat-option>
                   </mat-select>
                 </mat-form-field>
               </div>
-              <div class="mt-3 text-center">
-                  <button mat-button class="btn btn-primary">Save</button>
+              <div class="mt-1 text-center">
+                  <button class="btn btn-primary btn-block w-100" (click)="onSubmit()">Save</button>
               </div>
             </form>
           </div>
